--- a/src/todo_app/compose.yml
+++ b/src/todo_app/compose.yml
@@ -4,8 +4,8 @@ services:
   go:
     container_name: todo-app
     build:
-      context: ./src
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./docker/local/Dockerfile
     tty: true
     ports:
       - 8080:8080
